# NISTPP

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  version.h.in  version.py
cmake/: conan.cmake  conan_cmake_wrapper.cmake  cppcheck.cmake  cxx_flags.cmake
nistpp/: CMakeLists.txt
nistpp/include/: NistTests.h  cephes.h  nist.h  template9.h
nistpp/include/nistpp/: bits_storage.h  math_helpers.h  matrix.h  sequence_helpers.h  tests.h  types.h
nistpp/src/: Nist.cpp  NistTests.cpp  approximate.cpp  bits_storage.cpp  block_frequency.cpp  cephes.cpp  cusum.cpp  dfft.cpp  dfft.h  fft.cpp  frequency.cpp  help_function.h  linear.cpp  longest_run_of_ones.cpp  math_helpers.cpp  matrix.cpp  non_overlapping_template.cpp  overlapping_template.cpp  random_excursions.cpp  random_excursions_variant.cpp  rank.cpp  runs.cpp  sequence_helpers.cpp  serial.cpp  universal.cpp
nistpp/src/templates/: template10.hpp  template11.hpp  template12.hpp  template13.hpp  template14.hpp  template15.hpp  template16.hpp  template2.hpp  template3.hpp  template4.hpp  template5.hpp  template6.hpp  template7.hpp  template8.hpp  template9.hpp  templates.cpp  templates.h
test_util/: CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  main.cpp  tst_block_frequency.h  tst_frequency.h  tst_linear.h  tst_longest_run_of_ones.h  tst_math_helpers.h  tst_non_overlapping_template.h  tst_runs.h  tst_test_from_sequence.h  tst_test_from_sequence_sha1.h  tst_test_from_sequence_sqrt3.h
